--- a/frontend/vue/public/index.html
+++ b/frontend/vue/public/index.html
@@ -31,6 +31,7 @@
             type="text/javascript"
             charset="utf-8"
         ></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     </head>
     <body>
         <noscript>
