--- a/frontend/vue/public/index.html
+++ b/frontend/vue/public/index.html
@@ -15,11 +15,11 @@
             href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
         />
         <link
-            href="http://vjs.zencdn.net/7.8.3/video-js.css"
+            href="https://vjs.zencdn.net/7.8.3/video-js.css"
             rel="stylesheet"
         />
         <script
-            src="http://vjs.zencdn.net/7.8.3/video.js"
+            src="https://vjs.zencdn.net/7.8.3/video.js"
             type="text/javascript"
             charset="utf-8"
         ></script>
